# jarvis-cli

./: .env.example  .gitignore  03-architecture-document.md  04-architecture-audit.md  05-jarvis-diagrams.md  06-local-llm-demo.md  06-mcp-integration.md  07-local-rag-compare.md  09-code-assistant-rules.md  CLAUDE.md  RAG-CITATIONS-TESTS.md  RAG-MANUAL-TESTS.md  RAG-MINICHAT-TESTS.md  RAG-RERANK-TESTS.md  README.md  REFACTORING-NOTES.md  SWARM-NOTES.md  requirements.txt  servers.json.example  setup.cfg
docs/: README.md  architecture.md  commands.md  configuration.md  conventions.md  overview.md  subsystems-llm-providers.md  subsystems-mcp.md  subsystems-rag-indexing.md  tasks-and-memory.md
faq/: authorization.md  connecting-the-server.md  getting-started.md  local-and-cloud-models.md  rag-and-retrieval.md
jarvis/: __init__.py  __main__.py  agent.py
knowledge_base/: SOURCE.md
models/: qwen-android-q8.Modelfile  qwen-android.Modelfile
scripts/: capture_generation.py  configure_memory.py  invariant_scenario.py  ltm_compare.py  multiserver_scenario.py  personalize_demo.py  pipeline_scenario.py  qa_report.py  run_scenario.py  task_scenario.py
submission/: qa-report.txt  recording-guide.md
tests/: fake_engine.py  stdio_server.py  test_behavior_log.py  test_call_accounting.py  test_config_locks.py  test_config_validation.py  test_dialogue_state.py  test_diff_preview.py  test_done_summary.py  test_engine_router.py  test_env_file.py  test_files_mcp_server.py  test_git_mcp_server.py  test_help_client.py  test_indexing_chunking.py  test_indexing_embeddings.py  (+32 more)
(+159 files in other folders)
