[metadata]
name = jarvis-cli
version = 1.0.0
description = Interactive LLM assistant — prompt and API controls explorer
author = Alexander Buyko
python_requires = >=3.11

[options]
packages = find:
install_requires =
    requests>=2.31.0
    prompt-toolkit>=3.0
    plotext>=5.0
    mcp>=1.8

[options.entry_points]
console_scripts =
    jarvis = jarvis.__main__:main
