[metadata]
name = jarvis-cli
version = 1.0.0
description = Interactive LLM assistant — prompt and API controls explorer
author = Alexander Buyko
python_requires = >=3.11

[options]
packages = find:
install_requires =
    requests>=2.31.0
    prompt-toolkit>=3.0
    plotext>=5.0
    mcp>=1.8

[options.extras_require]
# Optional cross-encoder reranker (rag_rerank=cross_encoder). Free to run
# locally, but a heavy dependency — kept out of the base install.
#   pip install -e .[rerank]
rerank =
    sentence-transformers>=2.2

# Optional headless-browser driver for the Level-2 web smoke (WebAdapter). Heavy
# (pulls a browser binary via `playwright install chromium`) — kept out of base.
#   pip install -e .[web] && playwright install chromium
web =
    playwright>=1.40

[options.entry_points]
console_scripts =
    jarvis = jarvis.__main__:main
